--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <title>PaintJS</title>
 </head>
 <body>
-    <canvas id="jsCanvas" class="canvas"></canvas>
+    <canvas id="jsCanvas" class="canvas"></canvas><!--캔버스-->
         <div class="controls">
-            <div class="controls_colors" id="jsColors">
+            <div class="controls__range"><!--붓크기-->
+                <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1" />
+            </div>
+            <div class="controls__btns"> <!--색칠하기,저장하기버튼-->
+                <button id="jsMode">Fill</button>
+                <button id="jsSave">Save</button>
+            </div>
+            <div class="controls_colors" id="jsColors"> <!--팔렛트-->
             <div class="controls_color" style="background-color:#2c2c2c"></div>
             <div class="controls_color" style="background-color:white"></div>
             <div class="controls_color" style="background-color:#ff3b30"></div>
